--- a/index.html
+++ b/index.html
@@ -1,38 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <title>About Me</title>
-</head>
-<body>
- <header>
-      <h2>Hello, my name is <em>David Turner</em>. I program things and make magic with little robots in a black box.</h2>
- </header>
- <main>
-  <p>Born in Modesto, California, I have done and seen it all.</p>
-  <ul>
-   <li>Motion Graphics Artist</li>
-    <ul>
-     <li>Top rated in Photoshop by LinkedIn</li>
-     <li>After Effects</li>
-     <li>Nuke</li>
-     <li>Cinema 4D</li>
-     <li>Fusion</li>
-    </ul>
-   <li>Website Developer</li>
-    <ul>
-     <li>PHP</li>
-     <li>JS</li>
-     <li>HTML</li>
-     <li>SQL</li>
-    </ul>
-   <li>US Army Soldier</li>
-   <li>Database Analyist</li>
-   <li>Web Developer</li>
-  </ul>
- </main>
- <footer>
-  <p>&copy; 2021 by David Turner. &copy; Never copyleft. 2 Thessalonians 3:10</p>
- </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>David Turner</title>
+    <link href="/reset.css" type="text/css" property="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <h2>Hello, my name is <em>David Turner</em>.</h2>
+      <h3>
+        I program things and make magic with little robots in a black box.
+      </h3>
+      <h1>(AKA Software Developer)</h1>
+    </header>
+    <main>
+      <p>Born in Modesto, California, I have done and seen it all.</p>
+      <ul>
+        <li>Motion Graphics Artist</li>
+        <section>
+          <ul>
+            <li>Top rated in Photoshop by LinkedIn</li>
+            <li>After Effects</li>
+            <li>Nuke</li>
+            <li>Cinema 4D</li>
+            <li>Fusion</li>
+          </ul>
+        </section>
+        <li>Website Developer</li>
+        <section>
+          <ul>
+            <li>PHP</li>
+            <li>JS</li>
+            <li>HTML</li>
+            <li>SQL</li>
+          </ul>
+        </section>
+        <li>US Army Soldier</li>
+        <section>
+          <ul>
+            <li>Army Commendation Meda</li>
+            <li>Army Achievement Meda</li>
+            <li>Army & Air Force Presidental Unit Citation></li>
+            <li>Army Meritorious Unit Commendation</li>
+            <li>Army Good Conduct Medal</li>
+            <li>National Defense Service Medal</li>
+            <li>Global War on Terrorism Service Medal</li>
+            <li>Army Service Ribbon</li>
+            <li>
+              Demonstrated Logistician Recognition by Joint Chiefs of Staff
+            </li>
+          </ul>
+        </section>
+        <li>Database Analyist</li>
+        <section>
+          <ul>
+            <li>Oracle DB</li>
+            <li>Tableau</li>
+            <li>PowerBI</li>
+          </ul>
+        </section>
+      </ul>
+    </main>
+    <footer>
+      <p>&copy; 2021 by David Turner. copyright, never copyleft.</p>
+    </footer>
+
+    <script src="./js/quiz.js"></script>
+  </body>
 </html>
