--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <p>Born in Modesto, California, I have done and seen it all.</p>
-      <ul>
+      <div>
         <li>Motion Graphics Artist</li>
         <section>
           <ul>
@@ -59,7 +59,7 @@
             <li>PowerBI</li>
           </ul>
         </section>
-      </ul>
+      </div>
     </main>
     <footer>
       <p>&copy; 2021 by David Turner. copyright, never copyleft.</p>
