semantic html to validate better

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>David Turner</title>
-    <link href="/reset.css" type="text/css" property="stylesheet" />
+    <link href="./css/reset.css" type="text/css" property="stylesheet" />
   </head>
   <body>
     <header>
@@ -14,7 +14,7 @@
       <h1>(AKA Software Developer)</h1>
     </header>
     <main>
-      <p>Born in Modesto, California, I have done and seen it all.</p>
+      <p>In my life, I've been and done </p>
       <div>
         <li>Motion Graphics Artist</li>
         <section>
