Added top 10 projects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>(AKA Software Developer)</h1>
     </header>
     <main>
-      <p>In my life, I've been and done </p>
+      <p>In my life, I've been and done</p>
       <div>
         <li>Motion Graphics Artist</li>
         <section>
@@ -59,6 +59,34 @@
             <li>PowerBI</li>
           </ul>
         </section>
+      </div>
+
+      <div>
+        <h3>Top 10 Projects</h3>
+        <ul>
+          <li>KN Welcome Screen - Infomatics and greeting TV system</li>
+          <li>KNLobby - Guest Management</li>
+          <li>
+            KN FloorDash - Dashboard System for tracking near real-time progress
+            of key metrics in a warehouse
+          </li>
+          <li>Alexa Radio Station - Pirate Christian Radio</li>
+        </ul>
+        <ul>
+          <li>
+            Church Welcome Tracker - Tablet system to welcome guests and track
+            mailing and follow-up
+          </li>
+          <li>Church Media App - Share live media in a service.</li>
+          <li>Google Home Radio Station</li>
+          <li>
+            Radio Station App - Cross platform app for radio station, with
+            persistant settings.
+          </li>
+          <li>TrackIt5 - Track devices in warehouse (check-in/check-out)</li>
+          <li>Internal Ticket Management System</li>
+          <li>Internal Kanban Board</li>
+        </ul>
       </div>
     </main>
     <footer>
