--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <li>US Army Soldier</li>
         <section>
           <ul>
-            <li>Army Commendation Meda</li>
-            <li>Army Achievement Meda</li>
-            <li>Army & Air Force Presidental Unit Citation></li>
+            <li>Army Commendation Medal</li>
+            <li>Army Achievement Medal</li>
+            <li>Army & Air Force Presidental Unit Citation</li>
             <li>Army Meritorious Unit Commendation</li>
             <li>Army Good Conduct Medal</li>
             <li>National Defense Service Medal</li>
