Sanity check for CSS link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>David Turner</title>
     <link href="./css/reset.css" type="text/css" property="stylesheet" />
+    <link href="./css/index.css" type="text/css" property="stylesheet" />
   </head>
   <body>
     <header>
@@ -93,6 +94,6 @@
       <p>&copy; 2021 by David Turner. copyright, never copyleft.</p>
     </footer>
 
-    <script src="./js/quiz.js"></script>
+    <!-- <script src="./js/quiz.js"></script> -->
   </body>
 </html>
