Styling CSS, still a ways off, but getting a refresher on CSS. Forget older bad ideas, z-index is fine but pseudo is better! Let's GO!

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>David Turner</title>
-    <link href="./css/reset.css" type="text/css" property="stylesheet" />
-    <link href="./css/index.css" type="text/css" property="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/css/reset.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
   </head>
   <body>
     <header>
-      <h2>Hello, my name is <em>David Turner</em>.</h2>
+      <h2>Hello, my name is: <em>David Turner</em></h2>
       <h3>
         I program things and make magic with little robots in a black box.
       </h3>
-      <h1>(AKA Software Developer)</h1>
+      <h1>(also known as a software developer)</h1>
     </header>
     <main>
       <p>In my life, I've been and done</p>
