Styling CSS, still a ways off, but getting a refresher on CSS. Forget older bad ideas, z-index is fine but pseudo is better! Let's GO!

--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
       <p>&copy; 2021 by David Turner. copyright, never copyleft.</p>
     </footer>
 
-    <!-- <script src="./js/quiz.js"></script> -->
+    <script src="./js/quiz.js"></script>
   </body>
 </html>
