updated some sections with css setup

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>David Turner</title>
-    <link rel="stylesheet" type="text/css" href="/css/reset.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/css/index.css" />
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
       <p>In my life, I've been and done</p>
       <div>
         <li>Motion Graphics Artist</li>
-        <section>
+        <section id="mg">
           <ul>
             <li>Top rated in Photoshop by LinkedIn</li>
             <li>After Effects</li>
@@ -62,7 +62,7 @@
         </section>
       </div>
 
-      <div>
+      <div id="projects">
         <h3>Top 10 Projects</h3>
         <ul>
           <li>KN Welcome Screen - Infomatics and greeting TV system</li>
@@ -73,6 +73,7 @@
           </li>
           <li>Alexa Radio Station - Pirate Christian Radio</li>
         </ul>
+        <p>Project wish list:</p>
         <ul>
           <li>
             Church Welcome Tracker - Tablet system to welcome guests and track
@@ -94,6 +95,6 @@
       <p>&copy; 2021 by David Turner. copyright, never copyleft.</p>
     </footer>
 
-    <script src="./js/quiz.js"></script>
+    <!-- <script src="./js/quiz.js"></script> -->
   </body>
 </html>
