added linter, gitignore, updated README.md

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <h1>(also known as a software developer)</h1>
     </header>
     <main>
-      <p>In my life, I've been and done</p>
+      <p>In my life, I've been and done:</p>
       <div>
         <li>Motion Graphics Artist</li>
-        <section>
+        <section id='mg'>
           <ul>
             <li>Top rated in Photoshop by LinkedIn</li>
             <li>After Effects</li>
@@ -28,7 +28,7 @@
           </ul>
         </section>
         <li>Website Developer</li>
-        <section>
+        <section id ='wd'>
           <ul>
             <li>PHP</li>
             <li>JS</li>
@@ -37,7 +37,7 @@
           </ul>
         </section>
         <li>US Army Soldier</li>
-        <section>
+        <section id='usa'>
           <ul>
             <li>Army Commendation Medal</li>
             <li>Army Achievement Medal</li>
@@ -53,7 +53,7 @@
           </ul>
         </section>
         <li>Database Analyist</li>
-        <section>
+        <section id='db'>
           <ul>
             <li>Oracle DB</li>
             <li>Tableau</li>
@@ -94,6 +94,6 @@
       <p>&copy; 2021 by David Turner. copyright, never copyleft.</p>
     </footer>
 
-    <script src="./js/quiz.js"></script>
+    <!-- <script src="./js/quiz.js"></script> -->
   </body>
 </html>
