--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </header>
     <main>
       <p>In my life, I've been and done:</p>
-      <div>
+      <div id="masterData">
+        <ul>
         <li>Motion Graphics Artist</li>
         <section id='mg'>
           <ul>
@@ -60,9 +61,10 @@
             <li>PowerBI</li>
           </ul>
         </section>
+        </ul>
       </div>
 
-      <div>
+      <div id="projects">
         <h3>Top 10 Projects</h3>
         <ul>
           <li>KN Welcome Screen - Infomatics and greeting TV system</li>
